[package]
name = "competive-programing-rust"
version = "0.1.0"
authors = ["nola_suz"]
edition = "2018"

[dependencies]


[[bin]]
name = "main_a"
path = "src/atcoder/ABC060/A.rs"

[[bin]]
name = "main_b"
path = "src/atcoder/ABC060/B.rs"

[[bin]]
name = "main_c"
path = "src/atcoder/ABC060/C.rs"

[[bin]]
name = "main_d"
path = "src/atcoder/ABC060/D.rs"


